# simple_messanger

./: .gitignore  README.md
project/asmanity/templates/src/: index.html  index.js
project/asmanity/templates/src/components/: header.vue  registration.vue
server/: pyproject.toml
server/ashmanity/: __main__.py
server/ashmanity/src/: core.py  views.py
server/project/: __main__.py
server/project/asmanity/: core.py  views.py
server/project/asmanity/templates/: index.html
src/: package-lock.json  package.json
src/src/: index.html  index.js
src/src/components/: Admin.vue  header.vue  main.vue  messageItem.vue  messageList.vue  userAdd.vue  userItem.vue  userList.vue
src/src/scss/: main.scss
src/src/store/: store.js
src/src/store/modules/: users.js
war_prod/: __main__.py
war_prod/warprodaction/: test.py
war_prod/warprodaction/templates/: index.html  package-lock.json
war_prod/warprodaction/templates/src/scss/: main.scss
war_prod/warprodaction/templates/src/scss/utils/: vars.scss
